IfElseOperationReader_Expected_success_IntegrationTest