@@ -24,7 +24,10 @@
                         --add-opens javamm.compiler/academy.devonline.javamm.compiler.component.impl.util=ALL-UNNAMED
                         --add-opens
                         javamm.compiler/academy.devonline.javamm.compiler.component.impl.operation.simple=ALL-UNNAMED
+
                         --add-opens javamm.compiler/academy.devonline.javamm.compiler.integration=ALL-UNNAMED
+                        --add-opens javamm.compiler/academy.devonline.javamm.compiler.integration.expression=ALL-UNNAMED
+                        --add-opens javamm.compiler/academy.devonline.javamm.compiler.integration.operation=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
